# kybershards

./: .yamllint  LICENSE  Makefile  README.md  mkdocs.yml  prova.py  pyproject.toml
.github/: lint.yml
.github/workflows/: build-docs.yml  codeql.yml  conventional-commits.yml  lint.yml  publish-docs.yml  test.yml
0.1/: 404.html  index.html  objects.inv  sitemap.xml
0.1/css/: extra.css
0.1/js/: extra.js
0.1/kybershards/documentation/: index.html
0.1/kybershards/dsci/: index.html
0.1/kybershards/dsci/datasets/workers_smoking_habits/: index.html
0.1/kybershards/dsci/decomposition/ca/: index.html
0.1/kybershards/dsci/typing/: index.html
0.1/kybershards/dsci/utils/: index.html
0.1/search/: search_index.json
docs/: index.md
docs/kybershards/: documentation.md  dsci.md  types.md  utils.md
docs/kybershards/dsci/: types.md  typing.md  utils.md
docs/kybershards/dsci/datasets/: workers_smoking_habits.md
docs/kybershards/dsci/decomposition/: ca.md  svd.md
src/kybershards/: __init__.py  types.py  utils.py
src/kybershards/dsci/: __init__.py  types.py  typing.py  utils.py
src/kybershards/dsci/datasets/: __init__.py  loader.py
src/kybershards/dsci/datasets/data/: workers_smoking_habits.csv
src/kybershards/dsci/decomposition/: __init__.py  _svd.py  ca.py
tests/dsci/: test_utils.py
tests/dsci/decomposition/: test_ca.py
