[project]
name = "kybershards"
version = "0.1.0"
description = "A modular Python library providing implementations of machine learning components, data structures, and analysis tools for data science"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dsci = [
    "pandas>=2.3.0",
    "scikit-learn>=1.6.1",
]

[build-system]
requires = ["uv_build>=0.7.9,<0.8"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.401",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.12",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.29.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812","D203","D213","PLR0913"]
fixable = ["I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.run]
omit = ["tests/*"]
