[project]
name = "kybershards"
version = "0.1.0"
description = "A modular Python library providing implementations of machine learning components, data structures, and analysis tools for data science"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.4.0",
    "scikit-learn>=1.6.0"
    ]
license = "MIT"
license-files = ["LICENSE"]
classifiers=[
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Rust",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Development Status :: 5 - Production/Stable",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://saricvr.github.io/kybershards"
Documentation = "https://saricvr.github.io/kybershards"
Repository = "https://github.com/SaricVr/kybershards"
Issues = "https://github.com/SaricVr/kybershards/issues"
Changelog = "https://saricvr.github.io/kybershards/blob/master/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.7.9,<0.8"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.402",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.11.13",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.29.1",
]

[tool.uv]
default-groups = "all"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812","D203","D213","PLR0913"]
fixable = ["I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "S101"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.run]
omit = ["tests/*"]
